--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ body{
 .header-wrapper,.footer-wrapper,.contents-wrapper{
 	margin: 0 auto;
 	max-width: 800px;
+/*	max-width: 800px;  */
 }
 
 .contents-wrapper{
@@ -134,7 +135,8 @@ nav{
 
 .navbar-inverse .navbar-nav > li > a{
 	color: rgba(255,255,255,0.9);
-	line-height: 2.2;
+	line-height: 1.1;
+/*  line-height: 2.2;  */
 }
 
 .navbar-nav > li{
@@ -215,15 +217,16 @@ nav ul li{
 	width: 100px;
 }
 
-.header-links{
-	margin-right: 2rem;
-    margin-bottom: 2.2rem;
+.header-links {			
+    margin-right: 0rem;
+    margin-bottom: 3.4rem;
 }
 
 .header-links a {
 	cursor:pointer;
 	margin:0 0.75rem;
 	color: inherit;
+	
 }
 
 .header-links a:hover,.header-links a:focus{
@@ -620,7 +623,7 @@ nav ul li{
 	margin-bottom: 3rem;
 }
 .pic-meta .pic{
-	width: 200px;
+	width: 240px;
 	border-radius: 10px;
 	overflow: hidden;
 	display: inline-block;
@@ -638,7 +641,7 @@ nav ul li{
 
 
 footer{
-    background-image: url("../img/footer.jpg");
+// background-image: url("../img/footer.jpg");
 	background-color: #F0F0F0;
 	background-size: cover;
 	background-position: top center;
@@ -699,13 +702,13 @@ footer .address{
 	top: -4.8rem;
 	left: 43%;
 	background-color: #F0F0F0;
-	padding: 1.6rem;
+	padding: 0rem;
 	border-radius: 100%;
-	border: 4px solid rgb(50, 50, 50);
+	border: 4px solid rgb(50,50,50);
 }
 
 .footer-wrapper>.logo img{
-	width: 50px;
+	width: 80px;
 }
 
 
@@ -777,7 +780,15 @@ footer .address{
 		max-width: 800px;
 	}
 }
+// Edited
 
+@media print {
+   a[href]:after {
+        display: none;
+	visibility: hidden;
+   }
+}
+// End
 @media (min-width: 1000px){
 	#gallery .contents-wrapper{
 		width: 1000px;
