--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ nav ul li{
 
 
 .widgets-wrapper{
-	background-color:rgb(15,108,107);
+	background-color:rgb(#0a0b3b);
 	padding:3rem 3rem 8rem 3rem;
 }
 
