--- a/css/style.css
+++ b/css/style.css
@@ -932,7 +932,7 @@ body{
 }
 
 .gray-bg {
-	//background-image: url(../img/jsfc.jpg);
+	background-image: url(../img/gsfc.jpg);
     background-color: #f5f5f5;
 }
 /* Contact Us
