--- a/css/style.css
+++ b/css/style.css
@@ -933,7 +933,7 @@ body{
 
 .gray-bg {
 	background-image: url(../img/gsfc.jpg);
-    background-color: #f5f5f5;
+    //background-color: #f5f5f5;
 }
 /* Contact Us
 ---------------------*/
