--- a/css/style.css
+++ b/css/style.css
@@ -932,7 +932,7 @@ body{
 }
 
 .gray-bg {
-	background-image: url(../img/gsfc.jpg);
+	background-image: url(../img/px-fun-man-person-2361598-image.jpg);
     //background-color: #f5f5f5;
 }
 /* Contact Us
