--- a/css/style.css
+++ b/css/style.css
@@ -932,8 +932,7 @@ body{
 }
 
 .gray-bg {
-	background-image: url(../img/px-fun-man-person-2361598-image.jpg);
-    //background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
 /* Contact Us
 ---------------------*/
