--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ nav{
 }
 
 .navbar-custom{
-	background-color: rgb(15,108,107);
+	background-color: rgb(10, 11, 59);
 	border: 0;
 	margin-bottom: 0;
 }
@@ -286,7 +286,7 @@ nav ul li{
 
 
 .widgets-wrapper{
-	background-color:rgb(15,108,107);
+	background-color:rgb(10, 11, 59);
 	padding:3rem 3rem 8rem 3rem;
 }
 
