--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,8 @@ nav ul li{
 .slick-arrow{
 	font-family: 'FontAwesome';
 	background-color: rgb(240,240,240);
-	color: rgb(15,108,107);
-	border: 4px solid rgb(15,108,107);
+	color: rgb(10, 11, 59);
+	border: 4px solid rgb(10, 11, 59);
 	padding:0.5rem 1rem;
 	position: absolute;
     z-index: 999;
