--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5028,10 +5028,10 @@ a.thumbnail.active {
   color: #333;
 }
 .alert {
-  padding: 15px;
+  padding: 10px;
   margin-bottom: 20px;
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: 40px 1px;
 }
 .alert h4 {
   margin-top: 0;
