--- a/css/style.css
+++ b/css/style.css
@@ -1189,7 +1189,7 @@ body{margin-top:20px;}
 }
 .blog-grid .blog-img .date {
   position: absolute;
-  background: #fc5356;
+  background: #0a0b3b;
   color: #ffffff;
   padding: 8px 15px;
   left: 10px;
