--- a/css/style.css
+++ b/css/style.css
@@ -1441,3 +1441,537 @@ img {
     border-style: none;
 }
 
+/*-------------------------------------------------*/
+/* = 30.MOBILE MANU 
+/*-------------------------------------------------*/
+.ed-mob-menu{
+  position:fixed;
+  top:0px;
+  width:100%;
+  height:55px;
+  background:transparent;
+  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.32);
+  z-index: 999;
+  display:none;
+  margin-top: 0px;
+}
+.ed-mob-menu-con{
+  width: 90%;
+  margin: 0 auto;
+}
+.ed-mm-left{
+  float: left;
+  width: 50%;
+  box-sizing: border-box;
+}
+.wed-logo{
+}
+.wed-logo a{
+}
+.wed-logo a img{
+}
+.ed-mm-right{
+  float: left;
+  width: 50%;
+  box-sizing: border-box;
+}
+.ed-mm-menu{
+}
+.ed-micon{
+  float: right;
+}
+.ed-micon i{
+  width: 40px;
+  height: 40px;
+  border: 1px solid rgb(204, 203, 216);
+  text-align: center;
+  font-size: 20px;
+  padding: 9px;
+  border-radius: 2px;
+  margin-top: 10px;
+  color: rgb(204, 203, 216);
+  cursor: pointer;
+}
+.ed-mm-inn{
+  position: fixed;
+  width: 70%;
+  background: #fff;
+  padding: 50px;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.32);
+  overflow-y: auto;
+  right: -80%;
+  height: 100%;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition:all 0.5s ease;
+}
+.ed-mm-act{
+  right: 0%;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition:all 0.5s ease;
+}
+.ed-mi-close{
+  position: absolute;
+  z-index: 99;
+  margin:-50px 8px 8px -30px;
+}
+.ed-mi-close i{
+  width: 32px;
+  height: 32px;
+  border: 1px solid #0a2444;
+  text-align: center;
+  font-size: 20px;
+  padding: 5px;
+  border-radius: 2px;
+  margin-top: 10px;
+  color: #0a2444;
+  cursor: pointer;
+}
+.ed-mm-inn h4{
+}
+.ed-mm-inn ul{
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+.ed-mm-inn ul li{
+}
+.ed-mm-inn ul li a{
+  display: block;
+  border-bottom: 1px solid #ececec;
+  padding: 6px 0px 6px 25px;
+  font-size: 14px;
+}
+.ed-mm-inn ul li a:before {
+  content: "\f105";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  position: absolute;
+  font-size: 14px;
+  color: black;
+  margin-left:-25px;
+}
+.affix {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 55px;
+  background: #fff;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.32);
+  z-index: 999;
+  padding: 1px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition:all 0.5s ease;
+}
+.sb1 {
+ background: #0A0B3B;
+ position: fixed;
+ width: 100%;
+ top: 0px;
+ z-index: 9999;
+ box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.48);
+}
+.sb1 h3 {
+ color: #fff;
+ font-weight: 700;
+ font-size: 16px;
+ text-transform: uppercase;
+}
+.sb1-1 {} .sb1-2 {
+ float: right;
+}
+.sb1-2 button {
+ background: #2d3a40;
+ border: 0px;
+ color: #fff !important;
+ font-weight: 600;
+ text-transform: uppercase;
+ font-size: 12px;
+ padding: 20px;
+ border-radius: 0px;
+}
+.sb2 {
+ background: #0A0B3B;
+ margin-top: 59px;
+}
+.sb2-1 {
+ float: left;
+ width: 20%;
+ background: #263238;
+ color: #fff;
+ height: 100%;
+ position: absolute;
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+ transition: all 0.5s ease;
+}
+.sb2-1 a {
+ color: #cecece;
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+ transition: all 0.5s ease;
+}
+.sb2-1 a:hover {
+ color: #fff;
+ /* padding-left: 30px; */
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+ transition: all 0.5s ease;
+ text-decoration: none;
+}
+.sb2-12 {
+ position: relative;
+ overflow: hidden;
+ padding: 15px;
+ background: #e66030;
+}
+.sb2-12 ul {
+ padding: 0px;
+}
+.sb2-12 ul li {
+ float: left;
+ display: inline-block;
+}
+.sb2-12 ul li:nth-child(1) {
+ width: 15%;
+}
+.sb2-12 ul li:nth-child(2) {
+ width: 70%;
+ padding: 0px 7px;
+}
+.sb2-12 ul li:nth-child(3) {
+ width: 10%;
+}
+.sb2-12 ul li img {
+ width: 30px;
+ border-radius: 50%;
+}
+.sb2-12 ul li h5 {
+ margin-bottom: 0px;
+ margin-top: 0px;
+ font-size: 14px;
+ color: #fff;
+}
+.sb2-12 ul li h5 span {
+ display: block;
+ font-size: 12px;
+ color: #ffcfbe;
+margin-top: -4px;	
+}
+.sb2-13 {
+background: #0A0B3B;
+} 
+.sb2-13 ul {
+ /* padding: 20px; */
+ 
+ margin-left: 0px;
+ padding-left: 0px;
+ margin-bottom: 0px;
+}
+.sb2-13 ul li {
+ list-style-type: none;
+ /* border-bottom: 1px solid #303b40; */
+ /* padding: 3px 20px; */
+}
+.sb2-13 ul li a {
+ display: block;
+ font-size: 13.5px;
+ padding: 10px 0px;
+ border-bottom: 1px solid #002958;
+ padding: 12px 20px;
+ background: #0A0B3B;
+}
+.sb2-13 ul li a:after {
+ font-family: FontAwesome;
+ content: "\f105";
+ font-size: 16px;
+ display: block;
+ position: absolute;
+ margin-top: -15px;
+ right: 20px;
+ font-size: 12px;
+ line-height: 1;
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
+ -webkit-transform: rotate(0deg);
+ -ms-transform: rotate(0deg);
+ -o-transform: rotate(0deg);
+ transform: rotate(0deg);
+ -webkit-transition: -webkit-transform .2s ease-in-out;
+ -o-transition: -webkit-transform .2s ease-in-out;
+ transition: -webkit-transform .2s ease-in-out;
+}
+.sb2-13 ul li a:hover:after {
+ -webkit-transform: rotate(90deg);
+ -ms-transform: rotate(90deg);
+ -o-transform: rotate(90deg);
+ transform: rotate(90deg);
+}
+.sb2-13 ul li a:focus:after {
+ -webkit-transform: rotate(90deg);
+ -ms-transform: rotate(90deg);
+ -o-transform: rotate(90deg);
+ transform: rotate(90deg);
+}
+.sb2-13 ul li a:hover {
+ background: #022c5d;
+}
+.sb2-13 ul li a:focus {
+ background: #022c5d;
+}
+.menu-act {
+ background: #57666d;
+}
+.sb2-13 ul li a i {
+ margin-right: 8px;
+ width: 16px;
+}
+.sb2-2 {
+ float: left;
+ width: 80%;
+ padding: 40px;
+ margin-left: 20%;
+ background: #e3e8ea;
+}
+.sb2-2-1 {
+ background: #fff;
+ padding: 25px;
+}
+.sb2-2-1 h2 {
+ margin-top: 0px;
+}
+.sb2-2-1 p {} .sb2-2-1 table {
+ width: 100%;
+}
+.sb2-2-1 table tr {} .sb2-2-1 table tr th {} .sb2-2-1 table tr td {} .sb2-2-1 table tr td a {} .sb2-2-1-edit {} .sb2-2-1-edit i {
+ color: #FF5722;
+}
+.sb2-2-add-blog textarea {
+ width: 100%;
+ display: block;
+ border: 1px solid #ccc;
+ border-radius: 4px;
+ height: 200px;
+}
+.sa-blog {} .sa-blog-post {
+ position: relative;
+ overflow: hidden;
+ border-bottom: 1px solid #d2d2d2;
+ padding: 25px 0px;
+}
+.sa-blog-post h2 {
+ color: #000;
+ font-weight: 700;
+}
+.sa-blog-post span {
+ font-style: italic;
+ color: #888;
+}
+.sa-blog-post span b {
+ font-weight: 500;
+ color: #000;
+}
+.sa-blog-post img {
+ width: 100%;
+ padding-bottom: 25px;
+ padding-top: 20px;
+}
+.sa-blog-post p {
+ color: #888;
+ font-size: 15px;
+ line-height: 24px;
+ padding-bottom: 15px;
+}
+.sa-blog-post-btn {
+ background: #f7941e;
+ color: #fff;
+ padding: 5px;
+}
+.sa-blog-com-1 {
+ padding: 50px 0px;
+}
+.sa-blog-com {} .sa-blog-ads {} .sa-blog-ads img {} .sa-blog-rece {} .sa-blog-rece h3 {
+ text-transform: uppercase;
+ font-size: 18px;
+}
+.sa-blog-rece ul {
+ padding: 0px;
+}
+.sa-blog-rece ul li {
+ list-style-type: none;
+}
+.sa-blog-rece ul li a {
+ border-bottom: 1px solid #e1e6ec;
+ color: #a2a2a2 !important;
+ font-weight: 200 !important;
+ line-height: 40px;
+ padding-bottom: 7px;
+ font-size: 14px;
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+ transition: all 0.5s ease;
+}
+.sa-blog-rece ul li a:hover {
+ padding-left: 8px;
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+ transition: all 0.5s ease;
+}
+.sa-blog-rece ul li a i {
+ padding-right: 8px;
+}
+.sa-blog-g {
+ padding-top: 50px;
+}
+.sa-blog-g img {} .n-blog-top {
+ background: #000000;
+ padding: 10px 0px;
+ box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.8);
+}
+.blog-logo {} .blog-logo a {} .blog-logo a img {
+ width: 175px;
+}
+.blog-soc {} .blog-soc ul {
+ padding: 0px;
+ float: right;
+ margin-bottom: 0px;
+ padding-top: 25px;
+}
+.blog-soc ul li {
+ float: left;
+ display: inline-block;
+ padding-right: 6px;
+}
+.blog-soc ul li a {} .blog-soc ul li a i {
+ color: #ffffff;
+ width: 24px;
+ height: 24px;
+ /* border: 1px solid #6d6d6d; */
+ 
+ padding: 5px;
+ text-align: center;
+ border-radius: 20px;
+ background: #f7941e;
+}
+.blog-copy {
+ padding: 50px;
+ background: #000;
+ color: #fff;
+}
+.blog-copy p {
+ text-align: center;
+ margin-bottom: 0px;
+}
+.blog-copy p a {
+ color: #fff;
+}
+.blog-login {
+ background: url(../images/bg-2.html) no-repeat;
+ background-size: cover;
+ width: 100%;
+ height: 100%;
+ position: absolute;
+}
+.blog-login:before {} .blog-login-in {
+ position: relative;
+ width: 30%;
+ margin: 0 auto;
+ margin-top: 7%;
+ background: #fff;
+ padding: 40px;
+ border-radius: 3px;
+ box-shadow: 0px 0px 50px 2px rgba(0, 0, 0, 0.51);
+}
+.blog-login-in form {
+ position: relative;
+}
+.blog-login-in form img {
+ margin: 0 auto;
+ display: table;
+ padding-bottom: 25px;
+}
+.blog-login-in input {} .blog-login-in button {
+ color: #fff;
+ background-color: #fff;
+ border-color: #428433;
+ background: #4e923f;
+ font-weight: 700;
+}
+.blog-login-in a {
+ display: block;
+}
+/*-------------------------------------------------------*/
+/* 2.LEFT MENU
+/*-------------------------------------------------------*/
+
+.left-sub-menu {
+ padding: 0px;
+} .left-sub-menu ul {
+ /* padding: 0px 0px 10px 40px; */
+}
+.left-sub-menu ul li {
+ list-style-type: none;
+ border-bottom: 1px solid #002856;
+}
+.left-sub-menu ul li:last-child {
+ border-bottom: 0px solid #303b40;
+}
+.left-sub-menu ul li a {
+ display: block;
+ font-size: 13.5px;
+ padding: 10px 24px 10px 45px;
+}
+.left-sub-menu ul li a:hover {
+ background: none;
+ padding-left: 55px;
+}
+.left-sub-menu ul li a:focus {
+ background: none;
+}
+.left-sub-menu ul li a:after {
+ display: none;
+}
+.sb2-2-2 {
+ position: relative;
+ overflow: hidden;
+ margin-bottom: 15px;
+}
+.sb2-2-2 ul {
+ padding: 0px;
+ margin-bottom: 0px;
+}
+.sb2-2-2 ul li {
+ list-style-type: none;
+ float: left;
+ padding-right: 5px;
+}
+.sb2-2-2 ul li a {
+ color: #495d65;
+ vertical-align: middle;
+}
+.sb2-2-2 ul li a i {
+ padding-right: 2px;
+}
+.active-bre:before {
+ content: "/";
+ padding: 0 5px;
+ color: #333;
+}
+.my-acc {} .my-acc:hover {
+ background: #4b5a61 !important;
+}
+.my-acc:focus {
+ background: #4b5a61 !important;
+}
+
