--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*************************************
-** Author: Mofid Ansari (ansarimofid)
-** Website: http://ansarimofid.in
-** Email: ansarimofid@gmail.com
+** Author: Kasun C Fernando (kasuncfdo)
+** Website: http://kasuncfernando.tk
+** Email: chanukaf7@gmail.com
 **************************************/
 
 /*Primary Color:rgb(15,108,107)*/
