--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,17 @@ nav{
 	margin-bottom: 0;
 }
 
+.navbar-nav > li:hover > .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu.multi-level {
+  display: none;
+}
+.nav.navbar-nav li:hover ul {
+  display: block  
+}
+
 .navbar-inverse .navbar-nav > li > a{
 	color: rgba(255,255,255,0.9);
 	line-height: 1.1;
@@ -1441,7 +1452,4 @@ img {
     border-style: none;
 }
 
-.navbar-nav > li:hover > .dropdown-menu {
-  display: block;
-}
 
