--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,10 @@ nav{
   display: block  
 }
 
+.dropdown-menu.multi-level {
+  display: block;
+}
+
 .navbar-inverse .navbar-nav > li > a{
 	color: rgba(255,255,255,0.9);
 	line-height: 1.1;
