--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,10 @@ nav{
   display: block;
 }
 
+.nav.navbar-nav li:hover ul {
+  display: block  
+}
+
 .navbar-inverse .navbar-nav > li > a{
 	color: rgba(255,255,255,0.9);
 	line-height: 1.1;
