--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,6 @@ nav{
     -webkit-border-radius: 6px 0 6px 6px;
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition:all 0.5s ease;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{
@@ -147,7 +143,11 @@ nav{
 
 .navbar-inverse .navbar-nav > li > a{
 	color: rgba(255,255,255,0.9);
-	line-height: 1.1;
+	line-height: 1.1;{
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition:all 0.5s ease;}
 /*  line-height: 2.2;  */
 }
 
