--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -1,3 +1,9 @@
+/*************************************
+** Author: Kasun C Fernando (kasuncfdo)
+** Website: http://kasuncfernando.tk
+** Email: chanukaf7@gmail.com
+**************************************/
+
 /* Magnific Popup CSS */
 .mfp-bg {
   top: 0;
