--- a/css/style.css
+++ b/css/style.css
@@ -1478,4 +1478,17 @@ img {
   transform: translateX(-50%);
 }
 
+ /* For mobile devices and Tablet */
+ @media screen (min-width: 320px) and (max-width: 768px) {
+  #code here
+} 
+
+/* For PC with minimum resolution till your PC resolution */ 
+@media screen (min-width: 769px) and (max-width: 1400px) {
+  #code here
+}
+/* For Screen Higher than 1400px */ 
+@media screen (min-width: 1401px) {
+  #code here
+} 
 
