--- a/css/style.css
+++ b/css/style.css
@@ -1480,15 +1480,24 @@ img {
 
  /* For mobile devices and Tablet */
  @media screen (min-width: 320px) and (max-width: 768px) {
-  #code here
+  body{
+    width:1000px;
+    margin:0 auto;
+    }
 } 
 
 /* For PC with minimum resolution till your PC resolution */ 
 @media screen (min-width: 769px) and (max-width: 1400px) {
-  #code here
+  body{
+    width:1000px;
+    margin:0 auto;
+    }
 }
 /* For Screen Higher than 1400px */ 
 @media screen (min-width: 1401px) {
-  #code here
+  body{
+    width:1000px;
+    margin:0 auto;
+    }
 } 
 
