--- a/College Assests/main-infoslider/engine1/style.css
+++ b/College Assests/main-infoslider/engine1/style.css
@@ -54,7 +54,7 @@
 	max-height:540px;
 	max-width: 100%;
 	vertical-align: top;
-	border:2px solid #FFFFFF;
+	border:none;
 	overflow: hidden;
 }
 #wowslider-container1 .ws_images ul a{
@@ -269,7 +269,7 @@
 #wowslider-container1 .ws-title{
 	position:absolute;
 	display:block;
-	font: 2.2em 'Exo 2', Arial, Helvetica, sans-serif;
+	font: 2.1em 'Exo 2', Arial, Helvetica, sans-serif;
 	bottom: 1em;
 	left: 0.5em;
 	margin-right: 0.5em; 
@@ -306,11 +306,6 @@
 	width:85px;
 	height:48px;
 	background: url(./loading.gif) 50% 50% no-repeat;
-}
-#wowslider-container1 .ws_images {
-    box-shadow: 0px 0px 2px rgba(100, 100, 100, 0.7);	
-    -moz-box-shadow: 0px 0px 2px rgba(100, 100, 100, 0.7);
-    -webkit-box-shadow: 0px 0px 2px rgba(100, 100, 100, 0.7); 
 }
 #wowslider-container1 .ws_bullets  a img{
 	text-indent:0;
