--- a/css/style.css
+++ b/css/style.css
@@ -1542,7 +1542,7 @@ nav a {
 
 @font-face {
 font-family: 'unicons';
-src: url('fonts/unicons.ttf') format('truetype');
+src: url('../fonts/unicons.ttf') format('truetype');
 font-weight: normal;
 font-style: normal;
 }
