--- a/css/style.css
+++ b/css/style.css
@@ -648,75 +648,95 @@ nav ul li{
 ****************/
 
 
-footer{
-// background-image: url("../img/footer.jpg");
-	background-color: #F0F0F0;
-	background-size: cover;
-	background-position: top center;
-	border-top: 4px solid rgb(50,50,50);
-	display: flex;
-	align-items: center;
-	margin-top: 5rem;
+footer {
+	background: #0a0b3b none repeat scroll 0 0;
+	color: #0a0b3b(10, 3, 75);
+	font-size: 12px;
+	padding: 0.5% 0;
 }
 
-.footer-wrapper{
-	padding: 6rem 1rem 2rem 1rem;;
-	position: relative;
-}
-
-.seperator:after{
-	content: "|";
-	font-style: normal;
-}
-
-footer .row{
-	font-size: 1.5rem;
-}
-
-footer .address{
+.footer-area {
+	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg) ;
+	padding: 20px 0;
 
 }
 
 
-.links a{
-	color:rgba(0, 0, 0, 0.87);
+    .footer-content ul {
+	padding: 0 3px;
 }
 
-.links a:hover{
-	color:rgba(0, 0, 0, 1);
+.footer-content h2 {
+	font-size: 1.5em;
 }
 
-.links>div{
-	margin-bottom: 1rem
+    .footer-content h2,
+.footer-content a {
+	color: #ffffff !important;
+	transition: 0.3s ease;
 }
 
-
-.footer-social {
-	font-size: 2rem;
+.footer-content a:hover {
+	color: #6f6de6 !important;
+	text-decoration: none;
 }
 
-
-.footer-social a{
-	color: rgb(50,50,50);
-	margin:0 0.25rem;
-	opacity: 0.85;
-}
-.footer-social a:hover{
-	opacity: 1;
+.footer-content-logo img {
+	margin: 20px auto;
+	text-align: center;
 }
 
-.footer-wrapper>.logo {
-	position: absolute;
-	top: -4.8rem;
-	left: 43%;
-	background-color: #F0F0F0;
-	padding: 0rem;
-	border-radius: 100%;
-	border: 4px solid rgb(50,50,50);
+.not-front #page-title {
+	margin-bottom: 5%;
 }
 
-.footer-wrapper>.logo img{
-	width: 80px;
+.footer-content p {
+    font-family: 'Poppins', sans-serif;
+	color: #ffffff !important;
+}
+
+.footer-content ul {
+  list-style: none; /* Remove default bullets */
+}
+
+.footer-content ul li::before {
+  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: rgb(255, 255, 255); /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
+}
+
+/***HR LINE**/
+.hr-text {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: black;
+  text-align: center;
+  height: 1.5em;
+  opacity: 0.5;
+}
+.hr-text:before {
+  content: "";
+  background: linear-gradient(to right, transparent, #818078, transparent);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 1px;
+}
+.hr-text:after {
+  content: attr(data-content);
+  position: relative;
+  display: inline-block;
+  color: rgb(235, 235, 235);
+  padding: 0 0.5em;
+  line-height: 1.5em;
+  color: #ffffff;
+  background-color: #0e0d3754;
 }
 
 
