--- a/css/style.css
+++ b/css/style.css
@@ -1666,17 +1666,16 @@ transition: all 200ms linear;
 
 /* Large rounded red border */
 hr.redline {
-  border: 2.8px dashed rgb(231, 11, 11);
-  border-radius: 0px;
-        margin: 0px;
+  height: 2.8px;
+  background-color: red;
+  border: none;
 }
 
 /* Large rounded dark blue border */
 hr.blueline {
-  border: 2.9px dashed rgb(17, 17, 146);
-  border-radius: 0px;
-        margin: 0px;
-}
+  height: 2.8px;
+  background-color: #010997;
+  border: none;
 
 /***Last Updated 21-12-19***/
 @media only screen and (width: 1024px) {
