--- a/css/style.css
+++ b/css/style.css
@@ -1669,6 +1669,7 @@ hr.redline {
   height: 2.8px;
   background-color: red;
   border: none;
+  margin-top: 5rem;
 }
 
 /* Large rounded dark blue border */
@@ -1676,6 +1677,7 @@ hr.blueline {
   height: 2.8px;
   background-color: #010997;
   border: none;
+  margin-top: 5rem;
 
 /***Last Updated 21-12-19***/
 @media only screen and (width: 1024px) {
