--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4357,7 +4357,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar-nav {
     float: left;
-    margin: 0;
+    //margin: 0;
   }
   .navbar-nav > li {
     float: left;
