--- a/css/style.css
+++ b/css/style.css
@@ -1699,3 +1699,9 @@ hr.blueline {
     margin-right: -7rem;
 }
 }****/
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"); {
+  body {
+  font-family: "Poppins", sans-serif;
+}
+}
