--- a/css/style.css
+++ b/css/style.css
@@ -1700,8 +1700,8 @@ hr.blueline {
 }
 }****/
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"); {
-  body {
+ @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+body {
   font-family: "Poppins", sans-serif;
-}
 }
