--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ nav{
 	background-color: rgb(10, 11, 59);
 	border: 0;
 	margin-bottom: 0;
+  border-radius: 0;
 }
 
 .navbar-nav > li:hover > .dropdown-menu {
