--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html{
 }
 
 .primary-color{
-	color:rgb(15,108,107) !important;
+	color:rgb(255 255 255) !important;
 }
 
 strong{
@@ -47,7 +47,7 @@ body{
     flex-direction: column;
 }
 
-.header-wrapper,.footer-wrapper,.contents-wrapper{
+.footer-wrapper,.contents-wrapper{
 	margin: 0 auto;
 	max-width: 800px;
 /*	max-width: 800px;  */
@@ -187,66 +187,11 @@ nav ul li{
 	background-color: rgb(50,50,50);
 }
 
-.header-container{
-	display: flex;
-	align-items:flex-end;
-	justify-content: space-between;
-	margin: 0.4rem 0;
-}
 
 #dropdown1{
 	// overflow: hidden;
 }
 
-.logo-name{
-	display: flex;
-	align-items:center;
-	margin-left: 2rem;
-}
-
-.logo-name .name h5{
-	// font-weight: bold;
-	font-size: 2.3rem;
-	text-decoration: none;
-	color: rgb(50,50,50);
-}
-
-.logo-name .name a:hover{
-	text-decoration: none;
-}
-
-.logo-name .name{
-	margin-left: 1rem;
-}
-
-.logo-name .name h5:nth-child(1){
-	margin-bottom: 0.3rem;
-}
-
-.logo-name .name h5:nth-child(2){
-	margin-top: 0.1rem;
-}
-
-.logo-name .logo img{
-	width: 100px;
-}
-
-.header-links {			
-    margin-right: 0rem;
-    margin-bottom: 3.4rem;
-}
-
-.header-links a {
-	cursor:pointer;
-	margin:0 0.75rem;
-	color: inherit;
-	
-}
-
-.header-links a:hover,.header-links a:focus{
-	color: inherit;
-	opacity: 0.9;
-}
 
 /***************
 *Slick Custom Styles
@@ -1730,3 +1675,305 @@ hr.blueline {
   margin-right: -7rem;
   margin-top: -5rem;
 }
+
+                     hgroup h1 span .site-title{
+    font-family: 'trajan pro';
+    text-decoration: none;
+    text-shadow: 0px 0px 1px #aaaaaa;
+    color: white;
+    font-size: 40PX;
+ 
+ }
+ ol, ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+                :root {
+	--r-dark-blue: 10;
+	--g-dark-blue: 11;
+	--b-dark-blue: 59;
+}
+
+
+li {
+	list-style: none
+}
+
+.menu-wrapper {
+	width: 1.5ch;
+	height: 18.5px;
+	cursor: pointer
+}
+
+.hamburger-menu,
+.hamburger-menu:after,
+.hamburger-menu:before {
+	width: 1.5ch;
+	height: 3.5px
+}
+
+.hamburger-menu {
+	position: relative;
+	transform: translateY(7.5px);
+	background: #fff;
+	transition: all 0ms 300ms
+}
+
+.hamburger-menu.dark {
+	background: #223454
+}
+
+.hamburger-menu.animate {
+	background: rgba(255, 255, 255, 0)
+}
+
+.hamburger-menu:before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 7.5px;
+	background: #fff;
+	transition: bottom 300ms 300ms cubic-bezier(.23, 1, .32, 1), transform 300ms cubic-bezier(.23, 1, .32, 1)
+}
+
+.hamburger-menu.dark:before {
+	background: #223454
+}
+
+.hamburger-menu:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 7.5px;
+	background: #fff;
+	transition: top 300ms 300ms cubic-bezier(.23, 1, .32, 1), transform 300ms cubic-bezier(.23, 1, .32, 1)
+}
+
+.hamburger-menu.dark:after {
+	background: #223454
+}
+
+.hamburger-menu.animate:after {
+	top: 0;
+	transform: rotate(45deg);
+	transition: top 300ms cubic-bezier(.23, 1, .32, 1), transform 300ms 300ms cubic-bezier(.23, 1, .32, 1)
+}
+
+.hamburger-menu.animate:before {
+	bottom: 0;
+	transform: rotate(-45deg);
+	transition: bottom 300ms cubic-bezier(.23, 1, .32, 1), transform 300ms 300ms cubic-bezier(.23, 1, .32, 1)
+}
+
+/**SEARCH CSS***/
+
+.search-super {
+	position: relative;
+	height: 35px;
+	width: 35px
+}
+
+.search {
+ display: table-row;
+}
+.search input {
+  background: none;
+  border: none;
+  outline: none;
+  width: 28px;
+  min-width: 0;
+  padding: 0;
+  z-index: 1;
+  position: relative;
+  line-height: 18px;
+  margin: 5px 0;
+  font-size: 14px;
+  -webkit-appearance: none;
+  font-family: "Mukta Malar";
+  transition: all 0.6s ease;
+  cursor: pointer;
+  color: #fff;
+}
+.search input + div {
+  position: relative;
+  height: 28px;
+  width: 100%;
+  margin: -28px 0 0 0;
+}
+.search input + div svg {
+  display: block;
+  position: absolute;
+  height: 28px;
+  width: 160px;
+  right: 0;
+  top: 0;
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-dashoffset: 271.908;
+  stroke-dasharray: 59 212.908;
+  transition: all 0.6s ease;
+}
+.search input:not(:-moz-placeholder-shown) {
+  width: 160px;
+  padding: 0 4px;
+  cursor: text;
+}
+.search input:not(:-ms-input-placeholder) {
+  width: 160px;
+  padding: 0 4px;
+  cursor: text;
+}
+.search input:not(:placeholder-shown), .search input:focus {
+  width: 160px;
+  padding: 0 4px;
+  cursor: text;
+}
+.search input:not(:-moz-placeholder-shown) + div svg {
+  stroke-dasharray: 150 212.908;
+  stroke-dashoffset: 300;
+}
+.search input:not(:-ms-input-placeholder) + div svg {
+  stroke-dasharray: 150 212.908;
+  stroke-dashoffset: 300;
+}
+.search input:not(:placeholder-shown) + div svg, .search input:focus + div svg {
+  stroke-dasharray: 150 212.908;
+  //stroke-dashoffset: 300;
+}
+
+::-moz-selection {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+::selection {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+::-moz-selection {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.search-wrapper {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 35px;
+	height: 35px;
+	transition: all 0.5s cubic-bezier(.53, .96, .44, .9);
+	cursor: pointer
+}
+
+.search-wrapper::before {
+	content: "";
+	position: absolute;
+	top: 28%;
+	right: 18.5%;
+	width: 0;
+	height: 3.5px;
+	margin-top: -2px;
+	background-color: #fff;
+	transform: rotate(-45deg);
+	transform-origin: right top
+}
+
+.search-wrapper.dark::before {
+	background-color: #223454
+}
+
+.search-wrapper::after {
+	content: "";
+	position: absolute;
+	bottom: 15.5%;
+	right: 14.5%;
+	width: 40%;
+	height: 3.5px;
+	margin-top: -2px;
+	background-color: #FFF;
+	transform: rotate(45deg);
+	transform-origin: right bottom
+}
+
+.search-wrapper.dark::after {
+	background-color: #223454
+}
+
+.search-icon {
+	position: absolute;
+	display: block;
+	top: 20%;
+	left: 20%;
+	width: 50%;
+	height: 50%;
+	border-radius: 50%;
+	border-width: 3.5px;
+	border-style: solid;
+	border-color: #fff
+}
+
+.search-icon.dark {
+	border-color: #223454
+}
+
+nav:not(.rank-math-breadcrumb) .hero-unit {
+	width: 100%;
+	z-index: 0;
+	position: sticky;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+
+nav:not(.rank-math-breadcrumb) ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 35px;
+    transition: padding 0.5s cubic-bezier(.53,.96,.44,.9);
+}
+
+.nav-icons {
+	color: #fff;
+	font-size: 2rem;
+	cursor: pointer
+}
+
+.nav-icons.dark {
+	color: #081428
+}
+
+.top-crest {
+	width: auto;
+	position: relative;
+	transition: transform 0.5s cubic-bezier(.53, .96, .44, .9)
+}
+
+@media (max-width:599px) {
+	.top-crest {
+		height: auto;
+		width: auto
+	}
+}
+
+@media (min-width:600px) and (max-width:767px) {
+	.top-crest {
+		height: 100px;
+		width: auto
+	}
+}
+
+@media (min-width:768px) {
+	.top-crest {
+    height: 160px;
+    width: auto;
+    padding-right: 11rem;
+    position: sticky;
+    align-items: center;
+}
+}
+
+.top-crest.hidden {
+	visibility: hidden
+}
+
